--- a/index.html
+++ b/index.html
@@ -6,12 +6,48 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="description"></div>
-    <div class="info-section"></div>
-    <div class="quote-section"></div>
-    <div class="contact-us"></div>
-    <div class="footer"></div>
+
+    <div class="header">
+        <div class="logo">Header LOGO</div>
+        <div class="links">
+            <ul>
+                <li><a href="#">Header link one</a></li>
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="description">
+        <h1 class="left-d">This website is awesome</h1>
+        <img src="" alt="placeholder">
+    </div>
+
+    <div class="info-section">
+        <h2>Some random information.</h2>
+        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
+    </div>
+
+    <div class="quote-section">
+        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis 
+            minus obcaecati consequuntur incidunt soluta consectetur aliquam, 
+            nihil voluptate tempora omnis vitae eius, recusandae eveniet, 
+            asperiores autem facere adipisci perferendis accusantium. <br>
+            -random person</p>
+    </div>
+
+    <div class="sign-up">
+        <h3>call to action!! It's time!</h3>
+        <p>sign up for XYZ by clicking the button on the right over there> </p>
+        <button>Sign up</button>
+    </div>
+
+    <div class="footer">
+        <div> idk some copyright stuff or something here... HI i'm a 3 eyed alien.</div>
+    </div>
 
     
 </body>
