add images to webpage as well as some description text

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="header">
-        <div class="logo">Header LOGO</div>
+        <div class="logo"><img src="/images/croissant_logo.svg" alt=""></div>
         <div class="links">
             <ul>
                 <li><a href="#">Header link one</a></li>
@@ -19,16 +20,18 @@
     </div>
 
     <div class="description">
-        <h1 class="left-d">This website is awesome</h1>
-        <img src="" alt="placeholder">
+        <h1 class="left-d">Pastries with coffee are awesome</h1>
+        <p>A cup of coffee with a perfectly baked bread in the 
+            morning, evening, or night makes for a great time!</p>
+        <img src="/images/latte_with_pastries.jpg" alt="an image of 3 lattes and some bread">
     </div>
 
     <div class="info-section">
-        <h2>Some random information.</h2>
-        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
-        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
-        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
-        <div><img src="" alt="placeholder"><p>this is some subtext under an illustration or image</p></div>
+        <h2>Some great coffee and pastry options</h2>
+        <div><img src="/images/Cappuccino.jpg" alt="Image of a Cappuccino"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="/images/Iced_Caramel_Macchiato.jpg" alt="iced caramel macchiato"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="/images/choco_croissant.jpg" alt="3 croissants stacked as a pyramid"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="/images/strawberry_shortcake.jpg" alt="slice of strawberry shortcake"><p>this is some subtext under an illustration or image</p></div>
     </div>
 
     <div class="quote-section">
