Add back ground color to every landing page section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
     </div>
 
+    <!-- this is the hero text -->
     <div class="description">
         <h1 class="left-d">Pastries with coffee are awesome</h1>
         <p>A cup of coffee with a perfectly baked bread in the 
