crop images to all be the same size in info-section and finished the positioning in the header, hero text, info-section, and quote section

--- a/index.html
+++ b/index.html
@@ -21,26 +21,33 @@
 
     <!-- this is the hero text -->
     <div class="description">
+        <div class="left-side">
         <h1 class="left-d">Pastries with coffee are awesome</h1>
         <p>A cup of coffee with a perfectly baked bread in the 
             morning, evening, or night makes for a great time!</p>
-        <img src="/images/latte_with_pastries.jpg" alt="an image of 3 lattes and some bread">
+        </div>
+        <div class="crop-box-1">
+        <img src="/images/latte_with_pastries.jpg" alt="an image of 3 lattes and some bread" class="latte">
+        </div>
     </div>
 
     <div class="info-section">
         <h2>Some great coffee and pastry options</h2>
+        <div class="menu">
         <div><img src="/images/Cappuccino.jpg" alt="Image of a Cappuccino"><p>this is some subtext under an illustration or image</p></div>
         <div><img src="/images/Iced_Caramel_Macchiato.jpg" alt="iced caramel macchiato"><p>this is some subtext under an illustration or image</p></div>
         <div><img src="/images/choco_croissant.jpg" alt="3 croissants stacked as a pyramid"><p>this is some subtext under an illustration or image</p></div>
         <div><img src="/images/strawberry_shortcake.jpg" alt="slice of strawberry shortcake"><p>this is some subtext under an illustration or image</p></div>
+        </div>
     </div>
 
     <div class="quote-section">
         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis 
             minus obcaecati consequuntur incidunt soluta consectetur aliquam, 
             nihil voluptate tempora omnis vitae eius, recusandae eveniet, 
-            asperiores autem facere adipisci perferendis accusantium. <br>
-            -random person</p>
+            asperiores autem facere adipisci perferendis accusantium.</p>
+            
+        <p class="align-r">-random person</p>
     </div>
 
     <div class="sign-up">
