add style and html

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
         <p class="align-r">-random person</p>
     </div>
 
+    <div class="sign-up-section">
     <div class="sign-up">
-        <h3>call to action!! It's time!</h3>
-        <p>sign up for XYZ by clicking the button on the right over there> </p>
+        <div class="left-side">
+            <h3>call to action!! It's time!</h3>
+            <p>sign up for XYZ by clicking the button on the right over there> </p>
+        </div>
         <button>Sign up</button>
+    </div>
     </div>
 
     <div class="footer">
