--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis 
             minus obcaecati consequuntur incidunt soluta consectetur aliquam, 
             nihil voluptate tempora omnis vitae eius, recusandae eveniet, 
-            asperiores autem facere adipisci perferendis accusantium.</p>
+            asperiores autem facere adipisci perferendis accusantium."</p>
             
         <p class="align-r">-random person</p>
     </div>
@@ -53,15 +53,15 @@
     <div class="sign-up-section">
     <div class="sign-up">
         <div class="left-side">
-            <h3>call to action!! It's time!</h3>
-            <p>sign up for XYZ by clicking the button on the right over there> </p>
+            <h3>Call to action!! It's time!</h3>
+            <p>Sign up for our coffee by clicking the button on the right over there!</p>
         </div>
         <button>Sign up</button>
     </div>
     </div>
 
     <div class="footer">
-        <div> idk some copyright stuff or something here... HI i'm a 3 eyed alien.</div>
+        <div> Idk some copyright stuff or something here... HI i'm a 3 eyed alien.</div>
     </div>
 
     
