--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             morning, evening, or night makes for a great time!</p>
         </div>
         <div class="crop-box-1">
-        <img src="/images/latte_with_pastries.jpg" alt="an image of 3 lattes and some bread" class="latte">
+        <img src="./images/latte_with_pastries.jpg" alt="an image of 3 lattes and some bread" class="latte">
         </div>
     </div>
 
     <div class="info-section">
         <h2>Some great coffee and pastry options</h2>
         <div class="menu">
-        <div><img src="/images/Cappuccino.jpg" alt="Image of a Cappuccino"><p>this is some subtext under an illustration or image</p></div>
-        <div><img src="/images/Iced_Caramel_Macchiato.jpg" alt="iced caramel macchiato"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="./images/Cappuccino.jpg" alt="Image of a Cappuccino"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="./images/Iced_Caramel_Macchiato.jpg" alt="iced caramel macchiato"><p>this is some subtext under an illustration or image</p></div>
         <div><img src="/images/choco_croissant.jpg" alt="3 croissants stacked as a pyramid"><p>this is some subtext under an illustration or image</p></div>
         <div><img src="/images/strawberry_shortcake.jpg" alt="slice of strawberry shortcake"><p>this is some subtext under an illustration or image</p></div>
         </div>
