--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="menu">
         <div><img src="./images/Cappuccino.jpg" alt="Image of a Cappuccino"><p>this is some subtext under an illustration or image</p></div>
         <div><img src="./images/Iced_Caramel_Macchiato.jpg" alt="iced caramel macchiato"><p>this is some subtext under an illustration or image</p></div>
-        <div><img src="/images/choco_croissant.jpg" alt="3 croissants stacked as a pyramid"><p>this is some subtext under an illustration or image</p></div>
-        <div><img src="/images/strawberry_shortcake.jpg" alt="slice of strawberry shortcake"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="./images/choco_croissant.jpg" alt="3 croissants stacked as a pyramid"><p>this is some subtext under an illustration or image</p></div>
+        <div><img src="./images/strawberry_shortcake.jpg" alt="slice of strawberry shortcake"><p>this is some subtext under an illustration or image</p></div>
         </div>
     </div>
 
