--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="header">
-        <div class="logo"><img src="/images/croissant_logo.svg" alt=""></div>
+        <div class="logo"><img src="./images/croissant_logo.svg" alt=""></div>
         <div class="links">
             <ul>
                 <li><a href="#">Header link one</a></li>
